# Lab_2-Gestiune_cont_bancar-

./: .gitignore  CMakeLists.txt  github  github.pub  main.c
Infrastructura/: domain.c  domain.h  repo.c  repo.h
Lab_2/: main.c  main.ilk
Lab_2/Repository/: domain.c  domain.h  repo.c  repo.h
Lab_2/Service/: service.c  service.h
Lab_2/Teste/: teste.c
Lab_2/UI/: main.ilk  ui.c
Lab_2/Validation/: valid.c  valid.h
Repository/: domain.c  domain.h  repo.c
Service/: service.c  service.h
Teste/: teste.c  teste.h
UI/: ui.c  ui.h
Validation/: valid.c  valid.h
